# MonoShard

./: README.md
MonoShardExt/: CMakeLists.txt  Export.h  GMCore.cpp  GMCore.h  GMInterface.h  GameAddress.h  MonoLoader.cpp  MonoLoader.h  README.md  Utils.cpp  Utils.h
MonoShardExt/NativeLib/: eglib.lib  libgcmonosgen.lib  libmonoutils.lib
MonoShardExt/SDK/: SDK.hpp
MonoShardExt/SDK/Structures/Documented/APIVars/: APIVars.hpp
MonoShardExt/SDK/Structures/Documented/CHashMap/: CHashMap.hpp
MonoShardExt/SDK/Structures/Undocumented/VMExec/: VMExec.hpp
MonoShardModLib/: Core.cs  Game.cs  GameObject.cs  ModLoader.cs  MonoShardModLib.csproj  MonoShardModLib.sln  README.md  packages.config
MonoShardModLib/Hooks/: GameHooks.cs
MonoShardModLib/Item/: Item.cs
MonoShardModLib/ItemUtils/: Item.cs  Weapon.cs
MonoShardModLib/ModUtils/: ILoadable.cs  Mod.cs  ModFiles.cs  ModPacker.cs  ModReader.cs
MonoShardModLib/OtherUtils/: OtherUtils.cs
MonoShardModLib/Player/: Player.cs
MonoShardModLib/PlayerUtils/: Player.cs  Slot.cs
MonoShardModLib/Properties/: AssemblyInfo.cs
